2008-05-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/mcs51/asdata.c,
	* as/mcs51/asm.h: added org_cnt
	* as/mcs51/asmain.c (main, asmbl): fixed bug 1957716, changed old K&R to ANSI
	* as/mcs51/asout.c: changed old K&R to ANSI
	* as/mcs51/Makefile.in: use common identifiers
	* as/hc08/asdata.c,
	* as/hc08/asexpr.c,
	* as/hc08/asm.h,
	* as/hc08/asmain.c,
	* as/hc08/asout.c,
	* as/hc08/Makefile.bcc,
	* as/hc08/Makefile.in: synchronized with as/mcs51/*
	* sdcc_vc_in.h: added define __func__
	* src/SDCCast.c (expandInlineFuncs): applied patch 1957148 to fix bug 1717305,
	  Thanks Ruud van Silfhout
	* support/regression/tests/bug1717305.c: new, added

2008-05-05 Borut Razem <borut.razem AT siol.net>

	* support/regression/Makefile.in,
	  support/regression/fwk/lib/testfwk.c,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/z80/spec.mk:
	  added INC_DIR and LIBDIR paths
	* src/ds390/gen.c: removed duplicated selicolon

2008-05-04 Borut Razem <borut.razem AT siol.net>

	* support/regression/Makefile.in,
	  support/regression/fwk/lib/testfwk.c,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/mcs51-large/spec.mk,
	  support/regression/ports/mcs51-medium/spec.mk,
	  support/regression/ports/mcs51-small/spec.mk,
	  support/regression/ports/mcs51-stack-auto/spec.mk,
	  support/regression/ports/mcs51-xstack-auto/spec.mk,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ucz80/spec.mk:
	  added possibility to define the sdcc binary directory SDCC_BIN_PATH
	  used to run regeression tests

2008-05-01 Raphael Neider <rneider AT web.de>
